<resources>
    <string name="app_name">Seguros</string>
    <string name="consultar_seguro_tab0">Coche</string>
    <string name="consultar_seguro_tab1">Conductor</string>
    <string name="consultar_seguro_tab2">Condiciones</string>
    <string name="nuevo">NEW</string>
    <string name="foto">PHOTO</string>
    <string name="qr">QR</string>
    <string name="manual">Manual</string>
    <string name="add_vehicle_title">Vehicle information</string>
    <string name="add_driver_title">Driver information</string>
    <string name="ocr">DNI OCR</string>
    <string name="nfc">Read DNI with NFC</string>
    <string name="can">CAN</string>
    <string name="nfc_dialog_text">Introduzca el número CAN de su DNI. A continuación, pulse ACEPTAR y aproxime su DNI al chip NFC de su smartphone.</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="nfc_dialog_title">Read DNI with NFC</string>
    <string name="error">Error</string>
    <string name="reading_dnie">Leyendo DNIe...</string>
    <string name="can_incorrecto">El número CAN es incorrecto.</string>
    <string name="error_dni_nfc">Ocurrió un error durante la lectura del DNIe.</string>
    <string name="dnie_no_detectado">DNIe no detectado.</string>
    <string name="nfc_no_activado">Active el NFC para poder leer su DNIe.</string>
    <string name="sin_nfc">Su smartphone no tiene NFC.</string>
    <string name="vehiculos">Cars</string>
    <string name="seguros">Insurances</string>
    <string name="conductores">Drivers</string>
    <string name="OcrDNI">DNI Ocr</string>
    <string name="enter_date_of_birth">Enter Date of Birth (DD/MM/YYYY)</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_lastname">Enter Lastname</string>
    <string name="enter_dni">Enter DNI</string>
    <string name="submit">Submit</string>
    <string name="dnierror">Enter a valid DNI</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="surnameerror">Enter a valid surname</string>
    <string name="lastnameerror">Enter a valid lastname</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="UserForm">UserForm</string>
    <string name="gender_prompt">Choose a gender</string>
    <string name="place_of_residence">Enter Place of Residence</string>
    <string name="placeerror">Enter a valid place of residence</string>
    <string name="enter_licenseplate">Enter License Plate</string>
    <string name="cancel">Cancel</string>
    <string name="enter_plate">Enter Plate</string>
    <string name="enter_maker">Enter Maker</string>
    <string name="enter_model">Enter Model</string>
    <string name="enter_date_FM">Enter Year of First Matriculation</string>
    <string name="enter_gas">Enter Gas</string>
    <string name="enter_power">Enter Power</string>
    <string name="enter_doors">Enter Number of Car Doors</string>
    <string name="enter_km">Enter KM/year</string>
    <string name="enter_garage">Enter Garage</string>
    <string name="FMerror">Enter a valid Year of First Matriculation</string>
    <string name="plateerror">Enter a valid plate</string>
    <string name="powererror">Enter a valid power</string>
    <string name="KMerror">Enter a valid KM/year</string>
    <string name="doorerror">Enter a valid number of doors</string>
    <string name="calculate_insurance">Calculate Insurance</string>
    <string name="selected_vehicle">Selected vehicle:</string>
    <string name="selected_driver">Selected driver:</string>
    <string name="vehicle_not_selected">Vehicle not selected</string>
    <string name="driver_not_selected">Driver not selected</string>

    <string name="select_a_car">Select a car</string>
    <string name="select_a_driver">Select a driver</string>
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="intro_slide_1_title">Comparador de seguros</string>
    <string name="intro_slide_1_description">Compara seguros de coche rápida y fácilmente.</string>
    <string name="intro_slide_2_title">Registra vehículos</string>
    <string name="intro_slide_2_description">Guarda la información de tus vehículos haciéndoles una fotografía o escaneando el código QR de la etiqueta de sostenibilidad de la DGT.</string>
    <string name="intro_slide_3_title">Registra conductores</string>
    <string name="intro_slide_3_description">Almacena información de los conductores que conducirán tus vehículos haciendo una fotografía a sus DNIs o leyéndolos con NFC.</string>
    <string name="dialog_nfc_text">The NFC technology can only be used in the 3.0 DNI to extract its information.</string>
    <string name="dialog_qr_text">The sustainability labels are stickers that the Spanish DGT sends, they indicate the classification of the vehicle according to its emissions. Reading its code we can extract information from the vehicle.</string>
    <string name="dialog_ocr_text">This option uses the device’s camera to read the OCR data on Spanish identity cards.</string>
    <string name="insurance_title">Vehicle and car selected:</string>


</resources>
