<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/add_driver_title"
        android:gravity="center"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_ocr"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:text="@string/ocr"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="36dp"
                android:paddingStart="36dp"
                android:layout_margin="12dp"
                android:onClick="clickOCR"
                />
            <ImageButton
                android:id="@+id/info_ocr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_info_outline_black_24dp"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/button_ocr"
                android:onClick="clickInfoOCR"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_nfc"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:text="@string/nfc"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="36dp"
                android:paddingStart="36dp"
                android:layout_margin="12dp"
                android:onClick="clickNFC"
                />
            <ImageButton
                android:id="@+id/info_nfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_info_outline_black_24dp"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/button_nfc"
                android:onClick="clickInfoNFC"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="@string/manual"
        android:gravity="center"
        android:textSize="18sp"
        android:onClick="clickManual"/>

</LinearLayout>